Bug 100619 - Crash when cancel Tools/Customize/Toolbars (kde4 and gen rendering only + debug mode)
Summary: Crash when cancel Tools/Customize/Toolbars (kde4 and gen rendering only + deb...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2016-06-26 14:22 UTC by Julien Nabet
Modified: 2016-10-25 18:54 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with kde4 rendering (12.20 KB, text/plain)
2016-06-26 14:22 UTC, Julien Nabet
Details
bt with gen rendering (10.60 KB, text/plain)
2016-06-26 14:40 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2016-06-26 14:22:23 UTC
Created attachment 125925 [details]
bt with kde4 rendering

On pc Debian x86-64 with master sources updated yesterday, I got a crash when cancelling Tools/Customize/Toobars.

Steps to reproduce:
1) Launch Writer
2) Menu Tools/Customize
3) Select "Toolbars" tab
4) Click Cancel button
=> Crash
It crashes only with "gen" and "kde4" rendering, not with gtk or gtk3.
Comment 1 Julien Nabet 2016-06-26 14:23:43 UTC
Of course, since it's an assert, it needs a debug build.
Comment 2 Julien Nabet 2016-06-26 14:28:48 UTC
Caolán/Michael: thought you might be interested in this one since it concerns vcl and more specifically vclPtr.
Comment 3 Julien Nabet 2016-06-26 14:40:48 UTC
Created attachment 125926 [details]
bt with gen rendering
Comment 4 Caolán McNamara 2016-06-26 18:05:40 UTC
Cause that's a menu and those were recently tweaked with reference counting I'd guess that's relevant
Comment 5 Commit Notification 2016-06-26 20:05:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2184b08dd185f3f20d8b2098d3f652aed629b51f

Resolves: tdf#100619 vclptr assert with menu set to menubutton

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2016-06-27 19:09:25 UTC
With master sources updated today, I don't reproduce this.

Thank you Caolán!