Resolves: tdf#100619 vclptr assert with menu set to menubutton

Change-Id: I2e621567e3bbc01d6f52844014dba9e46fe79f41